[package]
name = "cdp-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.57"
futures = "0.3.21"
async-recursion = "1.0.0"
clap = { version = "3.1.6", features = ["derive"] }
